WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291866
[WebGPU] Command buffer error code handling is too strict
https://bugs.webkit.org/show_bug.cgi?id=291866
Summary
[WebGPU] Command buffer error code handling is too strict
Mike Wyrzykowski
Reported
2025-04-21 15:42:03 PDT
[WebGPU] Command buffer error code handling is too strict
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-21 15:44:24 PDT
<
rdar://problem/149717594
>
Mike Wyrzykowski
Comment 2
2025-04-21 15:48:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44347
EWS
Comment 3
2025-04-22 07:38:37 PDT
Committed
293956@main
(6c33a5906cb1): <
https://commits.webkit.org/293956@main
> Reviewed commits have been landed. Closing PR #44347 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug