[WebGPU] Command buffer error code handling is too strict https://bugs.webkit.org/show_bug.cgi?id=291866 radar://149717594

Reviewed by Tadeu Zagallo.

Current error code handling is a bit too restrictive and leads to
GPUP intentional crashes due to poorly behaving other applications,
which is due to error code = 0x5. Completely allow error code 0x5.

Also lose the GPUDevice instead of release assertion for long running
command buffers since terminating the process will not impact long
running compute kernels in any case.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::commitMTLCommandBuffer):

Canonical link: https://commits.webkit.org/293956@main